--- a/vb_ODBC.cls
+++ b/vb_ODBC.cls
@@ -12,84 +12,92 @@ Option Explicit
 'Copyright (c) 2016 mmYYmmdd
 
 '*********************************************************************************
-' ODBCæ¥ç¶š
+' ODBCÚ‘±
 ' --------------------------------------------------------------------------------
-'   Function        connect             æ¥ç¶šæ–‡å­—åˆ—ã‚’ç™ºè¡Œã—ã¦ãƒ‡ãƒ¼ã‚¿ãƒ™ãƒ¼ã‚¹ã«æ¥ç¶š
-'   Sub             disconnect          æ¥ç¶šæ–­
-'   Sub             disconnect_all      ã™ã¹ã¦ã®ã‚ªãƒ–ã‚¸ã‚§ã‚¯ãƒˆã®æ¥ç¶šã‚’æ–­
-'   Function        setTimeout          ã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆã™ã‚‹ç§’æ•°ã‚’è¨­å®š
-'   Sub             clear               ãƒ˜ãƒƒãƒ€ï¼ˆã‚«ãƒ©ãƒ ï¼‰ãƒ‡ãƒ¼ã‚¿ã¨ãƒ†ãƒ¼ãƒ–ãƒ«ãƒ‡ãƒ¼ã‚¿ã‚’æ¶ˆå»
-'   Property Get    last_connected      æœ€å¾Œã«æˆåŠŸã—ãŸæ¥ç¶šæ–‡å­—åˆ—ã‚‚ã—ãã¯ã‚¨ãƒ©ãƒ¼æƒ…å ±ã®ãå–å¾—
-'   Property Get    last_SQL            æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸSQLæ–‡å­—åˆ—ã®å–å¾—
-'   Property Get    last_elapsed        æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸSELECTæ–‡ã§ã‹ã‹ã£ãŸæ™‚é–“ (ãƒŸãƒªç§’)
-'   Property Get    last_execError      æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸexecæ–‡ã®ã‚¨ãƒ©ãƒ¼è¡Œã¨ã‚¨ãƒ©ãƒ¼å†…å®¹
-'   Property Get    last_queryError     æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸselectæ–‡ç­‰ã®ã‚¨ãƒ©ãƒ¼
-'   Function        tableList           ãƒ†ãƒ¼ãƒ–ãƒ«ä¸€è¦§å–å¾—
-'   Function        tableAttribute      ãƒ†ãƒ¼ãƒ–ãƒ«ã® Attribute
-'   Function        read_header         Selectæ–‡ã‚’ç™ºè¡Œã—ã¦ãƒ˜ãƒƒãƒ€ï¼ˆã‚«ãƒ©ãƒ ï¼‰æƒ…å ±ã‚’ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
-'   Function        get_header          ãƒ¡ãƒ³ãƒã«æ ¼ç´ã•ã‚ŒãŸãƒ˜ãƒƒãƒ€ï¼ˆã‚«ãƒ©ãƒ ï¼‰æƒ…å ±ã‚’å–å¾—ã™ã‚‹
-'   Function        select_flat         Selectæ–‡ã‚’ç™ºè¡Œã—ã¦2æ¬¡å…ƒé…åˆ—ã¨ã—ã¦ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
-'   Function        select_rowWise      Selectæ–‡ã‚’ç™ºè¡Œã—ã¦è¡Œã®é…åˆ—ã¨ã—ã¦ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
-'   Function        select_columnWise   Selectæ–‡ã‚’ç™ºè¡Œã—ã¦åˆ—ã®é…åˆ—ã¨ã—ã¦ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
-'   Function        exec                insertæ–‡ã‚„deleteæ–‡ã‚’å®Ÿè¡Œã™ã‚‹
-'   Function        rowSize             ãƒ†ãƒ¼ãƒ–ãƒ«ã®ãƒ¬ã‚³ãƒ¼ãƒ‰æ•°
-'   Function        colSize             ãƒ†ãƒ¼ãƒ–ãƒ«ã®ã‚«ãƒ©ãƒ æ•°
-'   Function        get_data            Select ã—ãŸãƒ†ãƒ¼ãƒ–ãƒ«ãƒ‡ãƒ¼ã‚¿ã®ã‚³ãƒ”ãƒ¼ã‚’è¿”ã™
-'   Function        move_data           Select ã—ãŸãƒ†ãƒ¼ãƒ–ãƒ«ãƒ‡ãƒ¼ã‚¿ã‚’moveã—ã¦è¿”ã™
-'   Function        insert_expr         insertæ–‡
-'   Function        insert_expr_        insertæ–‡ï¼ˆjagé…åˆ—ã¾ãŸã¯2æ¬¡å…ƒé…åˆ—ï¼‰
-'   Function        SQLDrivers          ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã•ã‚Œã¦ã„ã‚‹ODBCãƒ‰ãƒ©ã‚¤ãƒé…åˆ—ã‚’è¿”ã™
-'   Function        excel_expr          Excelãƒ–ãƒƒã‚¯ã«æ¥ç¶šã™ã‚‹ãŸã‚ã®æ¥ç¶šæ–‡å­—åˆ—
-'   Function        mdb_expr            accessdbã®æ¥ç¶šæ–‡å­—åˆ—
-'   Function        sqlServer_expr      SQL Serverã®æ¥ç¶šæ–‡å­—åˆ—
+'   Function        connect             Ú‘±•¶š—ñ‚ğ”­s‚µ‚Äƒf[ƒ^ƒx[ƒX‚ÉÚ‘±
+'   Sub             disconnect          Ú‘±’f
+'   Sub             disconnect_all      ‚·‚×‚Ä‚ÌƒIƒuƒWƒFƒNƒg‚ÌÚ‘±‚ğ’f
+'   Function        setTimeout          ƒ^ƒCƒ€ƒAƒEƒg‚·‚é•b”‚ğİ’è
+'   Sub             clear               ƒwƒbƒ_iƒJƒ‰ƒ€jƒf[ƒ^‚Æƒe[ƒuƒ‹ƒf[ƒ^‚ğÁ‹
+'   Property Get    last_connected      ÅŒã‚É¬Œ÷‚µ‚½Ú‘±•¶š—ñ‚à‚µ‚­‚ÍƒGƒ‰[î•ñ‚Ìæ“¾
+'   Property Get    last_SQL            ÅŒã‚É”­s‚³‚ê‚½SQL•¶š—ñ‚Ìæ“¾
+'   Property Get    last_elapsed        ÅŒã‚É”­s‚³‚ê‚½SELECT•¶‚Å‚©‚©‚Á‚½ŠÔ (ƒ~ƒŠ•b)
+'   Property Get    last_execError      ÅŒã‚É”­s‚³‚ê‚½exec•¶‚ÌƒGƒ‰[s‚ÆƒGƒ‰[“à—e
+'   Property Get    last_queryError     ÅŒã‚É”­s‚³‚ê‚½select•¶“™‚ÌƒGƒ‰[
+'   Function        tableList           ƒe[ƒuƒ‹ˆê——æ“¾
+'   Function        tableAttribute      ƒe[ƒuƒ‹‚Ì Attribute
+'   Function        read_header         Select•¶‚ğ”­s‚µ‚Äƒwƒbƒ_iƒJƒ‰ƒ€jî•ñ‚ğƒƒ“ƒo‚ÉŠi”[‚·‚é
+'   Function        get_header          ƒƒ“ƒo‚ÉŠi”[‚³‚ê‚½ƒwƒbƒ_iƒJƒ‰ƒ€jî•ñ‚ğæ“¾‚·‚é
+'   Function        select_flat         Select•¶‚ğ”­s‚µ‚Ä2ŸŒ³”z—ñ‚Æ‚µ‚Äƒƒ“ƒo‚ÉŠi”[‚·‚é
+'   Function        select_rowWise      Select•¶‚ğ”­s‚µ‚Äs‚Ì”z—ñ‚Æ‚µ‚Äƒƒ“ƒo‚ÉŠi”[‚·‚é
+'   Function        select_columnWise   Select•¶‚ğ”­s‚µ‚Ä—ñ‚Ì”z—ñ‚Æ‚µ‚Äƒƒ“ƒo‚ÉŠi”[‚·‚é
+'   Function        select_map          Select•¶‚ğ”­s‚µ‚Äs‚²‚Æ‚ÉƒR[ƒ‹ƒoƒbƒN‚ğŒÄ‚Ô
+'   Function        exec                insert•¶‚âdelete•¶‚ğÀs‚·‚é
+'   Function        rowSize             ƒe[ƒuƒ‹‚ÌƒŒƒR[ƒh”
+'   Function        colSize             ƒe[ƒuƒ‹‚ÌƒJƒ‰ƒ€”
+'   Function        get_data            Select ‚µ‚½ƒe[ƒuƒ‹ƒf[ƒ^‚ÌƒRƒs[‚ğ•Ô‚·
+'   Function        move_data           Select ‚µ‚½ƒe[ƒuƒ‹ƒf[ƒ^‚ğmove‚µ‚Ä•Ô‚·
+'   Function        insert_expr         insert•¶
+'   Function        insert_expr_        insert•¶ijag”z—ñ‚Ü‚½‚Í2ŸŒ³”z—ñj
+'   Function        SQLDrivers          ƒCƒ“ƒXƒg[ƒ‹‚³‚ê‚Ä‚¢‚éODBCƒhƒ‰ƒCƒo”z—ñ‚ğ•Ô‚·
+'   Function        excel_expr          ExcelƒuƒbƒN‚ÉÚ‘±‚·‚é‚½‚ß‚ÌÚ‘±•¶š—ñ
+'   Function        mdb_expr            accessdb‚ÌÚ‘±•¶š—ñ
+'   Function        sqlServer_expr      SQL Server‚ÌÚ‘±•¶š—ñ
 '*********************************************************************************
 
-Private Declare PtrSafe Sub terminateODBC Lib "vbODBC.dll" (ByVal n As Long)
+Private Declare PtrSafe Sub terminateODBC Lib "vbODBC.dll" (ByVal N As Long)
 
 Private Declare PtrSafe Sub terminateODBC_all Lib "vbODBC.dll" ()
 
 Private Declare PtrSafe Function initODBC Lib "vbODBC.dll" ( _
-                                        ByRef n As Long, _
+                                        ByRef N As Long, _
                                 ByRef rawStr As Variant) As Long
 
 Private Declare PtrSafe Function selectODBC Lib "vbODBC.dll" ( _
-                                    ByVal n As Long, _
+                                    ByVal N As Long, _
                             ByRef SQL As Variant, _
                         ByRef header As Variant) As Variant
 
 Private Declare PtrSafe Function selectODBC_rowWise Lib "vbODBC.dll" ( _
-                                    ByVal n As Long, _
+                                    ByVal N As Long, _
                                 ByRef SQL As Variant, _
                             ByRef header As Variant) As Variant
 
 Private Declare PtrSafe Function selectODBC_columnWise Lib "vbODBC.dll" ( _
-                                    ByVal n As Long, _
+                                    ByVal N As Long, _
                                 ByRef SQL As Variant, _
                             ByRef header As Variant) As Variant
 
+Private Declare PtrSafe Function selectODBC_map Lib "vbODBC.dll" ( _
+                                    ByVal N As Long, _
+                                ByRef SQL As Variant, _
+                            ByRef header As Variant, _
+                        ByVal callback As LongPtr, _
+                    ByRef param As Variant) As Long
+
 Private Declare PtrSafe Function columnAttributes Lib "vbODBC.dll" _
-                                    (ByVal n As Long, _
+                                    (ByVal N As Long, _
                                 ByRef SQL As Variant) As Variant
 
 Private Declare PtrSafe Function execODBC Lib "vbODBC.dll" _
-                                    (ByVal n As Long, _
+                                    (ByVal N As Long, _
                                 ByRef SQLs As Variant) As Variant
 
 Private Declare PtrSafe Function table_list_all Lib "vbODBC.dll" ( _
-                                    ByVal n As Long, _
+                                    ByVal N As Long, _
                                 ByRef schemaName As Variant) As Variant
 
 Private Declare PtrSafe Function columnAttributes_all Lib "vbODBC.dll" ( _
-                                    ByVal n As Long, _
+                                    ByVal N As Long, _
                                 ByRef schemaName As Variant, _
                             ByRef tableName As Variant) As Variant
 
 Private Declare PtrSafe Function setQueryTimeout Lib "vbODBC.dll" ( _
-                                    ByVal n As Long, _
+                                    ByVal N As Long, _
                                 ByVal sec As Long) As Long
                                 
 Private Declare PtrSafe Function getStatementError Lib "vbODBC.dll" ( _
-                                    ByVal n As Long) As Variant
+                                    ByVal N As Long) As Variant
 
 Private Declare PtrSafe Function SQLGetInstalledDrivers Lib "odbccp32.dll" ( _
                                             ByVal buf As String, _
@@ -98,7 +106,7 @@ Private Declare PtrSafe Function SQLGetInstalledDrivers Lib "odbccp32.dll" ( _
 
 Private Declare PtrSafe Function GetTickCount Lib "kernel32.dll" () As Long
 
-Private connectionString    As String    ' æ¥ç¶šæ–‡å­—åˆ—ã‚‚ã—ãã¯æ¥ç¶šã‚¨ãƒ©ãƒ¼æƒ…å ±
+Private connectionString    As String    ' Ú‘±•¶š—ñ‚à‚µ‚­‚ÍÚ‘±ƒGƒ‰[î•ñ
 Private mySQL_              As String
 Private myheader_           As Variant
 Private mydata_             As Variant
@@ -115,7 +123,7 @@ Private Sub Class_Terminate()
     clear
 End Sub
 
-' æ¥ç¶šæ–‡å­—åˆ—ã‚’ç™ºè¡Œã—ã¦ãƒ‡ãƒ¼ã‚¿ãƒ™ãƒ¼ã‚¹ã«æ¥ç¶š
+' Ú‘±•¶š—ñ‚ğ”­s‚µ‚Äƒf[ƒ^ƒx[ƒX‚ÉÚ‘±
 Public Function connect(ByVal connectionExpr As String) As Boolean
     Dim expr As Variant:    expr = connectionExpr
     connect = (0 <= initODBC(myNo_, expr))
@@ -126,54 +134,54 @@ Public Function connect(ByVal connectionExpr As String) As Boolean
     End If
 End Function
 
-' æ¥ç¶šæ–­
+' Ú‘±’f
 Public Sub disconnect()
     Call terminateODBC(myNo_)
 End Sub
 
-' ã™ã¹ã¦ã®ã‚ªãƒ–ã‚¸ã‚§ã‚¯ãƒˆã‚’æ¥ç¶šæ–­
+' ‚·‚×‚Ä‚ÌƒIƒuƒWƒFƒNƒg‚ğÚ‘±’f
 Public Sub disconnect_all()
     Call terminateODBC_all
 End Sub
 
-' ã‚¿ã‚¤ãƒ ã‚¢ã‚¦ãƒˆã™ã‚‹ç§’æ•°ã‚’è¨­å®š
+' ƒ^ƒCƒ€ƒAƒEƒg‚·‚é•b”‚ğİ’è
 Public Function setTimeout(ByVal s As Long) As Boolean
     setTimeout = (0 < setQueryTimeout(myNo_, s))
 End Function
 
-' ãƒ˜ãƒƒãƒ€ï¼ˆã‚«ãƒ©ãƒ ï¼‰ãƒ‡ãƒ¼ã‚¿ã¨ãƒ†ãƒ¼ãƒ–ãƒ«ãƒ‡ãƒ¼ã‚¿ã‚’æ¶ˆå»
+' ƒwƒbƒ_iƒJƒ‰ƒ€jƒf[ƒ^‚Æƒe[ƒuƒ‹ƒf[ƒ^‚ğÁ‹
 Public Sub clear()
     myheader_ = Empty
     mydata_ = Empty
 End Sub
 
-' æœ€å¾Œã«æˆåŠŸã—ãŸæ¥ç¶šæ–‡å­—åˆ—ã‚‚ã—ãã¯ã‚¨ãƒ©ãƒ¼æƒ…å ±ã®å–å¾—
+' ÅŒã‚É¬Œ÷‚µ‚½Ú‘±•¶š—ñ‚à‚µ‚­‚ÍƒGƒ‰[î•ñ‚Ìæ“¾
 Public Property Get last_connected() As String
     last_connected = connectionString
 End Property
 
-' æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸSQLæ–‡å­—åˆ—ã®å–å¾—
+' ÅŒã‚É”­s‚³‚ê‚½SQL•¶š—ñ‚Ìæ“¾
 Public Property Get last_SQL() As String
     last_SQL = mySQL_
 End Property
 
-' æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸSELECTæ–‡ã§ã‹ã‹ã£ãŸæ™‚é–“ï¼ˆãƒŸãƒªç§’ï¼‰
+' ÅŒã‚É”­s‚³‚ê‚½SELECT•¶‚Å‚©‚©‚Á‚½ŠÔiƒ~ƒŠ•bj
 Public Property Get last_elapsed() As Long
     last_elapsed = laptime_
 End Property
 
-'æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸexecæ–‡ã®ã‚¨ãƒ©ãƒ¼è¡Œã¨ã‚¨ãƒ©ãƒ¼å†…å®¹
+'ÅŒã‚É”­s‚³‚ê‚½exec•¶‚ÌƒGƒ‰[s‚ÆƒGƒ‰[“à—e
 Public Property Get last_execError() As Variant
     last_execError = myErrorNo_
 End Property
 
-'æœ€å¾Œã«ç™ºè¡Œã•ã‚ŒãŸselectæ–‡ç­‰ã®ã‚¨ãƒ©ãƒ¼
+'ÅŒã‚É”­s‚³‚ê‚½select•¶“™‚ÌƒGƒ‰[
 Public Property Get last_queryError() As Variant
     last_queryError = getStatementError(myNo_)
 End Property
 
 
-' ãƒ†ãƒ¼ãƒ–ãƒ«ä¸€è¦§å–å¾—
+' ƒe[ƒuƒ‹ˆê——æ“¾
 Function tableList(Optional ByRef schemaName As Variant, _
                         Optional ByVal type_ As String = "") As Variant
     Dim ret As Variant
@@ -186,8 +194,8 @@ Function tableList(Optional ByRef schemaName As Variant, _
     End If
 End Function
 
-' ãƒ†ãƒ¼ãƒ–ãƒ«ã® Attribute
-' åˆ—åã€å‹åã€ãƒ‡ãƒ¼ã‚¿é•·ã€ç²¾åº¦ã€å±æ€§ï¼ˆ1:ã‚­ãƒ¼, -1:Nullable, 0:ä»–ï¼‰
+' ƒe[ƒuƒ‹‚Ì Attribute
+' —ñ–¼AŒ^–¼Aƒf[ƒ^’·A¸“xA‘®«i1:ƒL[, -1:Nullable, 0:‘¼j
 Public Function tableAttribute(ByRef schemaName As Variant, _
                             ByRef tableName As Variant) As Variant
     Dim tmp As Variant
@@ -201,7 +209,7 @@ Public Function tableAttribute(ByRef schemaName As Variant, _
     tableAttribute = subM(foldl1(p_catC, move_many(tmp(0), tmp(1), tmp(2), tmp(3), tmp(4))), s)
 End Function
 
-' Selectæ–‡ã‚’ç™ºè¡Œã—ã¦ãƒ˜ãƒƒãƒ€ï¼ˆã‚«ãƒ©ãƒ ï¼‰æƒ…å ±ã‚’ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
+' Select•¶‚ğ”­s‚µ‚Äƒwƒbƒ_iƒJƒ‰ƒ€jî•ñ‚ğƒƒ“ƒo‚ÉŠi”[‚·‚é
 Public Function read_header(ByVal sqlExpr As String) As vb_ODBC
     mySQL_ = sqlExpr
     laptime_ = GetTickCount()
@@ -213,7 +221,7 @@ Public Function read_header(ByVal sqlExpr As String) As vb_ODBC
     Set read_header = Me
 End Function
 
-' ãƒ¡ãƒ³ãƒã«æ ¼ç´ã•ã‚ŒãŸãƒ˜ãƒƒãƒ€ï¼ˆã‚«ãƒ©ãƒ ï¼‰æƒ…å ±ã‚’å–å¾—ã™ã‚‹
+' ƒƒ“ƒo‚ÉŠi”[‚³‚ê‚½ƒwƒbƒ_iƒJƒ‰ƒ€jî•ñ‚ğæ“¾‚·‚é
 Public Function get_header(Optional ByVal transpose_ As Boolean = False) As Variant
     If transpose_ Then
         get_header = transpose(myheader_)
@@ -222,7 +230,7 @@ Public Function get_header(Optional ByVal transpose_ As Boolean = False) As Vari
     End If
 End Function
 
-' Selectæ–‡ã‚’ç™ºè¡Œã—ã¦2æ¬¡å…ƒé…åˆ—ã¨ã—ã¦ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
+' Select•¶‚ğ”­s‚µ‚Ä2ŸŒ³”z—ñ‚Æ‚µ‚Äƒƒ“ƒo‚ÉŠi”[‚·‚é
 Public Function select_flat(ByVal sqlExpr As String) As vb_ODBC
     mySQL_ = sqlExpr
     laptime_ = GetTickCount()
@@ -232,7 +240,7 @@ Public Function select_flat(ByVal sqlExpr As String) As vb_ODBC
     Set select_flat = Me
 End Function
 
-' Selectæ–‡ã‚’ç™ºè¡Œã—ã¦è¡Œã®é…åˆ—ã¨ã—ã¦ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
+' Select•¶‚ğ”­s‚µ‚Äs‚Ì”z—ñ‚Æ‚µ‚Äƒƒ“ƒo‚ÉŠi”[‚·‚é
 Public Function select_rowWise(ByVal sqlExpr As String) As vb_ODBC
     mySQL_ = sqlExpr
     laptime_ = GetTickCount()
@@ -242,7 +250,7 @@ Public Function select_rowWise(ByVal sqlExpr As String) As vb_ODBC
     Set select_rowWise = Me
 End Function
 
-' Selectæ–‡ã‚’ç™ºè¡Œã—ã¦åˆ—ã®é…åˆ—ã¨ã—ã¦ãƒ¡ãƒ³ãƒã«æ ¼ç´ã™ã‚‹
+' Select•¶‚ğ”­s‚µ‚Ä—ñ‚Ì”z—ñ‚Æ‚µ‚Äƒƒ“ƒo‚ÉŠi”[‚·‚é
 Public Function select_columnWise(ByVal sqlExpr As String) As vb_ODBC
     mySQL_ = sqlExpr
     laptime_ = GetTickCount()
@@ -252,7 +260,20 @@ Public Function select_columnWise(ByVal sqlExpr As String) As vb_ODBC
     Set select_columnWise = Me
 End Function
 
-' insertæ–‡ã‚„deleteæ–‡ã‚’å®Ÿè¡Œã™ã‚‹
+' Select•¶‚ğ”­s‚µ‚Äs‚²‚Æ‚ÉƒR[ƒ‹ƒoƒbƒN‚ğŒÄ‚Ô
+' ƒR[ƒ‹ƒoƒbƒN‚ÌƒVƒOƒjƒ`ƒƒ‚ÍˆÈ‰º‚Ì’Ê‚èBi–ß‚è’l‚ª0‚¾‚ÆFetchI—¹j
+' callback(ByVal As Long, ByRef As VARIANT, ByRef As VARIANT) As Long
+Public Function select_map(ByVal sqlExpr As String, _
+                        ByVal callback As LongPtr, _
+                    ByRef param As Variant) As Long
+    mySQL_ = sqlExpr
+    laptime_ = GetTickCount()
+    select_map = selectODBC_map(myNo_, sqlExpr, myheader_, callback, param)
+    myheader_ = catC(myheader_(0), myheader_(1))
+    laptime_ = GetTickCount() - laptime_
+End Function
+
+' insert•¶‚âdelete•¶‚ğÀs‚·‚é
 Public Function exec(ByRef sqlExpr As Variant) As vb_ODBC
     laptime_ = GetTickCount()
     If IsArray(sqlExpr) Then
@@ -264,27 +285,27 @@ Public Function exec(ByRef sqlExpr As Variant) As vb_ODBC
     Set exec = Me
 End Function
 
-' ãƒ†ãƒ¼ãƒ–ãƒ«ã®ãƒ¬ã‚³ãƒ¼ãƒ‰æ•°
+' ƒe[ƒuƒ‹‚ÌƒŒƒR[ƒh”
 Public Function rowSize() As Long
     rowSize = Haskell_2_stdFun.rowSize(mydata_)
 End Function
 
-' ãƒ†ãƒ¼ãƒ–ãƒ«ã®ã‚«ãƒ©ãƒ æ•°
+' ƒe[ƒuƒ‹‚ÌƒJƒ‰ƒ€”
 Public Function colSize() As Long
     colSize = Haskell_2_stdFun.colSize(mydata_)
 End Function
 
-' Select ã—ãŸãƒ†ãƒ¼ãƒ–ãƒ«ãƒ‡ãƒ¼ã‚¿ã®ã‚³ãƒ”ãƒ¼ã‚’è¿”ã™
+' Select ‚µ‚½ƒe[ƒuƒ‹ƒf[ƒ^‚ÌƒRƒs[‚ğ•Ô‚·
 Public Function get_data() As Variant
     get_data = mydata_
 End Function
 
-' Select ã—ãŸãƒ†ãƒ¼ãƒ–ãƒ«ãƒ‡ãƒ¼ã‚¿ã‚’moveã—ã¦è¿”ã™
+' Select ‚µ‚½ƒe[ƒuƒ‹ƒf[ƒ^‚ğmove‚µ‚Ä•Ô‚·
 Public Function move_data() As Variant
     Call swapVariant(move_data, mydata_)
 End Function
 
-' insertæ–‡
+' insert•¶
 Public Function insert_expr(ByVal table_name As String, _
                                 ByRef attr As Variant, _
                                     ByRef values As Variant) As String
@@ -314,7 +335,7 @@ Public Function insert_expr(ByVal table_name As String, _
             ");"
 End Function
 
-' insertæ–‡ï¼ˆjagé…åˆ—ã¾ãŸã¯2æ¬¡å…ƒé…åˆ—ï¼‰
+' insert•¶ijag”z—ñ‚Ü‚½‚Í2ŸŒ³”z—ñj
 Public Function insert_expr_(ByVal table_name As String, _
                                 ByRef attr As Variant, _
                                     ByRef values As Variant) As Variant
@@ -333,7 +354,7 @@ Public Function insert_expr_(ByVal table_name As String, _
     swapVariant insert_expr_, ret
 End Function
 
-' ã‚¤ãƒ³ã‚¹ãƒˆãƒ¼ãƒ«ã•ã‚Œã¦ã„ã‚‹ODBCãƒ‰ãƒ©ã‚¤ãƒé…åˆ—ã‚’è¿”ã™
+' ƒCƒ“ƒXƒg[ƒ‹‚³‚ê‚Ä‚¢‚éODBCƒhƒ‰ƒCƒo”z—ñ‚ğ•Ô‚·
 Public Function SQLDrivers(Optional ByVal buflen = 0) As Variant
     Dim buf As String, ret As Byte, retL As Integer
     buf = Space(IIf(0 < buflen, buflen, 2 * 1024))
@@ -341,7 +362,7 @@ Public Function SQLDrivers(Optional ByVal buflen = 0) As Variant
     SQLDrivers = Split(Left(buf, retL - 2), vbNullChar)
 End Function
 
-' Excelãƒ–ãƒƒã‚¯ã«æ¥ç¶šã™ã‚‹ãŸã‚ã®æ¥ç¶šæ–‡å­—åˆ—
+' ExcelƒuƒbƒN‚ÉÚ‘±‚·‚é‚½‚ß‚ÌÚ‘±•¶š—ñ
 Public Function excel_expr(ByVal bookName As String, _
                            Optional ByVal readonly As Boolean = True) As String
     Dim drivers As Variant
@@ -361,7 +382,7 @@ Public Function excel_expr(ByVal bookName As String, _
     '               INSERT INTO [Sheet1$A1:D10] VALUES(
 End Function
 
-' accessdbã®æ¥ç¶šæ–‡å­—åˆ—
+' accessdb‚ÌÚ‘±•¶š—ñ
 Public Function mdb_expr(ByVal dbName As String) As String
     Dim drivers As Variant
     Dim i As Variant
@@ -370,7 +391,7 @@ Public Function mdb_expr(ByVal dbName As String) As String
     '               SELECT * FROM MSysNameMap
 End Function
 
-' SQL Serverã®æ¥ç¶šæ–‡å­—åˆ—
+' SQL Server‚ÌÚ‘±•¶š—ñ
 Public Function sqlServer_expr(ByVal server As String, _
                                ByVal dbName As String, _
                                Optional ByVal uid As String = "", _
